--- a/src/dashboard/src/assets/scss/colors.scss
+++ b/src/dashboard/src/assets/scss/colors.scss
@@ -1,5 +1,5 @@
-$primary: #0b84a5;
-$info:   #8dddd0;
-$succes: #9dd866;
-$warning: #ffa055;
-$danger: #cb4630;
+$primary: #3366d6;
+$info:   #009f97;
+$succes: #00aa7c;
+$warning: #ffa600;
+$danger: #ff4d7f;
