dashboard: remove ts, toggle  sidebar

--- a/src/dashboard/src/common/assets/scss/navs/_sidebar.scss
+++ b/src/dashboard/src/common/assets/scss/navs/_sidebar.scss
@@ -169,6 +169,7 @@
           margin-right: 0.25rem;
         }
         span {
+          padding: 0.25rem 0;
           font-size: 0.85rem;
           display: inline;
         }
